# Faculty

./: .gitignore  LICENSE  README.md
0x1-the_beginning/AFCS-Toolkit/: README.md  findPrimalRoots.cpp  find_primitive_roots_mod_m.py  linear_congruential_equation_solver.py  order_finder.py  quadratic_residue.py  simplify_mod_m.py
0x2-the_struggle/Computer-Networks/MySSH/: Makefile  README.md  changelog.txt  client  client.c  server  server.c
0x2-the_struggle/Intro-to-Cryptography/RC4-LSFR/: main.py
0x3-the_end/Cloud-Computing/Homework-01/: Cargo.toml
0x3-the_end/Cloud-Computing/Homework-01/src/: api.rs
0x3-the_end/Cloud-Computing/Homework-01/website/: 404.html
0x3-the_end/Cloud-Computing/Homework-01/website/assets/css/: styles.css
0x3-the_end/Special-Chapters-of-Operating-Systems/: README.md
0x3-the_end/Special-Chapters-of-Operating-Systems/lab_03/proc_tools/: CMakeLists.txt  main.c
0x3-the_end/Special-Chapters-of-Operating-Systems/lab_03/proc_tools/auxiliary/: consumer.c  processor.c
0x3-the_end/Special-Chapters-of-Operating-Systems/lab_03/proc_tools/lib/: commands.h  constants.h  helpers.h
0x3-the_end/Special-Chapters-of-Operating-Systems/lab_03/proc_tools/src/: commands.c  constants.c  helpers.c
0x3-the_end/Special-Chapters-of-Operating-Systems/lab_11/Permissionless/: CMakeLists.txt  explicatie.txt  main.c
0x3-the_end/Special-Chapters-of-Operating-Systems/lab_11/Permissionless/include/: P1.h  P2.h  P3.h  constants.h  funcutils.h  permutils.h
0x3-the_end/Special-Chapters-of-Operating-Systems/lab_11/Permissionless/src/: P1.c  P2.c  P3.c  funcutils.c  permutils.c
Hackers_of_FII/F.O.C.A./: README.md  requirements.txt
Hackers_of_FII/Satoshi_Nakamoto/: README.md  keep_alive.py  main.py  pyproject.toml
(+1124 files in other folders)
